# VRCPulse

./: .env.example  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  README.md
docs/: AGENTS.md  README.md
docs/alerts/: AGENTS.md  README.md  policy-cloudfront.md  policy-user-threshold.md  policy-vrchat-status.md
docs/commands/: AGENTS.md  README.md  config.md  report.md  status.md
docs/commands/admin/: config.md
docs/i18n/: korean-support.md  production-readiness.md
docs/system/: AGENTS.md  README.md  data-collector.md  database-schema.md  visualization-engine.md
locales/: en.json  ko.json
migration/: Cargo.toml
migration/src/: lib.rs  m20260103_001_create_table.rs  m20260108_001_add_language_column.rs
scripts/: check-endpoints.sh  run-dev.sh
src/: audit.rs  config.rs  database.rs  error.rs  logging.rs  main.rs  state.rs
src/alerts/: mod.rs  threshold.rs
src/bot/: handler.rs  intro.rs  mod.rs
src/collector/: client.rs  config.rs  incident.rs  maintenance.rs  metrics.rs  mod.rs  models.rs  status.rs
src/commands/: config.rs  hello.rs  mod.rs  report.rs  shared.rs
src/commands/admin/: config.rs  embeds.rs  mod.rs
src/commands/config/: context.rs  embeds.rs  handlers.rs  mod.rs  validation.rs
src/entity/: bot_config.rs  command_logs.rs  component_logs.rs  guild_configs.rs  incident_updates.rs  incidents.rs  maintenances.rs  metric_logs.rs  mod.rs  prelude.rs  sent_alerts.rs  status_logs.rs  user_configs.rs  user_reports.rs
src/i18n/: mod.rs
src/repository/: config.rs  mod.rs
src/visualization/: dashboard.rs  mod.rs  query.rs  theme.rs
(+19 files in other folders)
