[package]
name = "vrc-pulse"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.42", features = ["serde"] }
dotenvy = "0.15.7"
envy = "0.4.2"
reqwest = { version = "0.13.1", features = ["json"] }
sea-orm = { version = "1.1.19", features = ["runtime-tokio-rustls", "sqlx-sqlite"] }
serde = { version = "1.0.228", features = ["derive"] }
serenity = { version = "0.12.5", features = ["client", "gateway", "model", "cache"] }
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
